--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.0",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.7"
   },
   "devDependencies": {
