--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,19 +1,26 @@
 version: '3.8'
 services:
   postgres:
-    image: postgres:15-alpine # Alpine‐based Postgres for minimal size :contentReference[oaicite:1]{index=1}
+    image: postgres:15-alpine
     restart: unless-stopped
     environment:
-      POSTGRES_USER: ${POSTGRES_USER} # User set via .env.postgres :contentReference[oaicite:2]{index=2}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD} # Password set via .env.postgres :contentReference[oaicite:3]{index=3}
-      POSTGRES_DB: ${POSTGRES_DB} # Default database name :contentReference[oaicite:4]{index=4}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - db-data:/var/lib/postgresql/data # Persist database files across restarts :contentReference[oaicite:5]{index=5}
+      - db-data:/var/lib/postgresql/data
     networks:
       - app-network
+    # Add health check for postgres
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   backend:
     build:
-      context: packages/backend
+      context: ./packages/backend
       dockerfile: Dockerfile
     restart: unless-stopped
     env_file:
@@ -22,24 +29,12 @@ services:
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
     ports:
       - "3000:3000"
-    volumes:
-      - ./backend:/app
-    command: ["node", "dist/main"]
+    # Fix: Remove the incorrect volume mount and use correct path
+    # volumes:
+    #   - ./backend:/app  # This was wrong - should be ./packages/backend if needed
     depends_on:
-      - postgres # Ensure DB starts first :contentReference[oaicite:9]{index=9}
-    networks:
-      - app-network
-  frontend:
-    build:
-      context: packages/frontend
-      dockerfile: Dockerfile
-    restart: unless-stopped
-    env_file:
-      - .env.frontend
-    ports:
-      - "80:80"
-    depends_on:
-      - backend # Ensure API is available :contentReference[oaicite:12]{index=12}
+      postgres:
+        condition: service_healthy  # Wait for postgres to be healthy
     networks:
       - app-network
 
